--- a/PhotoGPS/app/src/main/res/layout/fragment_camara.xml
+++ b/PhotoGPS/app/src/main/res/layout/fragment_camara.xml
@@ -20,6 +20,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_marginTop="16dp"
+        android:background="@color/colorarriba"
+        android:textColor="@color/blanco"
         android:text="@string/nombre_boton" />
 
 
