--- a/PhotoGPS/app/src/main/res/layout/fragment_galeria.xml
+++ b/PhotoGPS/app/src/main/res/layout/fragment_galeria.xml
@@ -13,8 +13,12 @@
 
     <Button
         android:id="@+id/show_options_button"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorarriba"
+        android:textColor="@color/blanco"
         android:text="@string/fotos"
         android:layout_centerHorizontal="true"/>
 
