--- a/PhotoGPS/app/src/main/res/values/colors.xml
+++ b/PhotoGPS/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorarriba">#33B5E5</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="blanco">#FFFFFF</color>
 </resources>
